--- a/MYPT-RMR.css
+++ b/MYPT-RMR.css
@@ -96,11 +96,17 @@ h1{
     
 }
 
-h2 {
+#subtitulo {
     font-size: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: black;
+    color: blue;
   }
+
+#asideTitulo {
+    color: black;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+} 
 
 p {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
