--- a/MYPT-RMR.css
+++ b/MYPT-RMR.css
@@ -120,7 +120,7 @@ div.galeriaImagens{
 }
 
 footer {
-    background-color: rgba(17, 14, 179, 0.918);
+    background-color: transparent;
     text-align: center;
 }
 
